# plutoross

./: DELETE_lidar_robot.urdf  MECANUM_CONTROL_GUIDE.md  QUICKSTART.txt  README.md  ROBOT_SETUP_FINAL.md  add_arm_plugin.py  cUsersAsusneroROBOT_SETUP_FINAL.md  diagnostic_arm.sh  display_my_robot.launch.py  fix_urdf.py  fix_world.sh  hospital_simple.world  hospital_simple.world.backup  hospital_simple_fixed.world  howtorun.md  install_mecanum.sh  install_yolo.sh  launch_hospital_robot.sh  launch_mecanum.sh  launch_robot_rviz.sh  lidar_robot.urdf  make_pkg_urdf.py  nav2_params.yaml  readmeFULLCONTROL.md  readmeHOWTORUNGAZEBO.md  readmeHOWTORUNSIMPLEMOVEMENT.md  setup_package.py  show_robot.sh  simple_house.world  spawn_robot.launch.py  start_gazebo.launch.py  start_navigation.sh  start_slam.sh  test_setup.sh
my_robot/: CMakeLists.txt  package.xml
my_robot/config/: display.rviz  joint_names_Assem2.SLDASM.yaml  mapper_params_online_async.yaml
my_robot/launch/: complete_navigation.launch.py  display.launch.py  gazebo.launch  gazebo_3rooms.launch.py  gazebo_control.launch.py  gazebo_world.launch.py  hospital_robot.launch.py  mapping.launch.py  mecanum_control.launch.py  mecanum_control_fixed.launch.py  mecanum_with_arms.launch.py  mobile_base.launch.py  nav2.launch.py  rviz_control.launch.py  slam.launch.py
my_robot/meshes/: back_leftwheel.STL  front_leftwheel.STL  leftarm.STL
my_robot/rviz/: force_fix.rviz  mapping.rviz  nav2_config.rviz
my_robot/scripts/: gazebo_arm_controller.py  gazebo_mecanum_controller.py  keyboard_teleop.py  mecanum_controller.py  (+6 more)
(+24 files in other folders)
